Pages Campus et Villes

--- a/templates/inc/nav.html.twig
+++ b/templates/inc/nav.html.twig
@@ -23,7 +23,7 @@ col-lg-12 col-md-12 col-sm-12">
                     <a class="nav-link" href="{{ path('gestion_villes') }}">Villes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Campus</a>
+                    <a class="nav-link" href="{{ path('gestion_campus') }}">Campus</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('admin') }}">Le bureau de l'admin'</a>
