--- a/templates/User/viewUserImport.html.twig
+++ b/templates/User/viewUserImport.html.twig
@@ -41,5 +41,5 @@
 
     {% endif %}
     <br>
-    <a class="btn btn-light" href="{{ path('admin') }}">Retour à la page administration</a>
+    <a class="btn btn-light" id="bouton-shadow" href="{{ path('admin') }}">Retour à la page administration</a>
 {% endblock %}
