--- a/templates/User/monProfil.html.twig
+++ b/templates/User/monProfil.html.twig
@@ -3,14 +3,14 @@
 {% block title %}Mon profil{% endblock %}
 
 {% block main %}
-    <div class="jumbotron">
+    <div class="jumbotron" id="afficher-sortie-shadow">
         <h1 class="text-center">Mon profil</h1>
         {{ form_start(userForm) }}
         <div class="form-row col-12">
             {% if user.getUrlPhoto() is not null%}
             <div class="col-lg-12 col-md-12 col-sm-12 text-center">
                 <img src="{{ asset('uploads/photo_profil/' ~
-                    user.getUrlPhoto()) }}" width="150">
+                    user.getUrlPhoto()) }}" width="150" id="bouton-shadow">
             </div>
             {% endif %}
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
@@ -34,7 +34,7 @@
             <div class="col-12">
                 <div class="form-row align-items-center">
                     <label class="col-2 col-lg-1 col-md-1 col-sm-2 col-xs-6">
-                        Photo</label>
+                        Photo :</label>
                     <div class="col-7 col-lg-4 col-md-5 col-sm-7"
                          style="padding-top: 15px"
                          style="background-color:#5eb5e0">
@@ -60,15 +60,15 @@
         {{ form_row(userForm._token) }}
         <br>
         <div class="text-center">
-            <button class="btn btn-primary" type="submit">Modifier</button>
-            <a class="btn btn-light" href="javascript:history.back()">Retour</a>
+            <button class="btn btn-info" id="bouton-shadow" type="submit">Modifier</button>
+            <a class="btn btn-light" id="bouton-shadow" href="javascript:history.back()">Retour</a>
             {{ form_end(userForm, {'render_rest': false}) }}
             {% if app.user.administrateur == 1 %}
                 <br>
                 <br>
                 <form action="{{ path('supprimer', {id: user.id}) }}" onsubmit="return validate()">
-                    <input id="status" hidden value="nope">
-                    <button class="btn btn-danger" type="submit">Supprimer utilisateur</button>
+                    <label for="status"><input id="status" hidden value="nope"></label>
+                    <button class="btn btn-danger" id="bouton-shadow" type="submit">Supprimer utilisateur</button>
                 </form>
             {% endif %}
         </div>
