--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,7 +4,7 @@
 
 {% block main %}
     <div class="jumbotron col-8 offset-2 col-lg-8 offset-lg-2 col-md-8 offset-md-2
-    col-sm-8 offset-sm-2">
+    col-sm-8 offset-sm-2" id="afficher-sortie-shadow">
     <form method="post">
         {% if error %}
             <div class="alert alert-danger">
@@ -35,7 +35,7 @@
         <br>
         <div class="row">
             <div class="col-4 col-xl-2 col-lg-3 col-md-12 col-sm-12">
-                <button class="btn btn-primary" type="submit">
+                <button class="btn btn-info" id="bouton-shadow" type="submit">
                     Connexion
                 </button>
             </div>
