--- a/templates/sortie/afficherSortie.html.twig
+++ b/templates/sortie/afficherSortie.html.twig
@@ -3,6 +3,8 @@
 {% block title %}Afficher une sortie{% endblock %}
 
 {% block main %}
+
+<div class="jumbotron shadow p-3 mb-5 rounded" id="afficher-sortie-shadow">
     <div>
     {% if utilisateurIns is null and idInscription is null %}
         {% if sortie.etat.id == 2 and date(sortie.dateLimiteInscription) > date("now") and sortie.getInscriptions()|length < 5%}
@@ -34,49 +36,85 @@
     <h2 class="col-sm-12 text-center">{{ sortie.nom }}</h2>
     <br>
 
-
+<div class="list-group list-group-flush">
     <dl class="row">
-        <dt class="col-sm-3">Commence le : </dt>
-        <dd class="col-sm-9">{{ sortie.dateHeureDebut | date("d/m/yy h:m")}}</dd>
+        <dt class="col-sm-3 list-group-item">Commence le : </dt>
+        <dd class="col-sm-9 d-flex align-items-center">{{ sortie.dateHeureDebut | date("d/m/yy h:m")}}</dd>
 
-        <dt class="col-sm-3">Date limite d'inscription : </dt>
-        <dd class="col-sm-9">{{ sortie.dateLimiteInscription | date("d/m/yy h:m")}}</dd>
+        <dt class="col-sm-3 list-group-item">Date limite d'inscription : </dt>
+        <dd class="col-sm-9 d-flex align-items-center">{{ sortie.dateLimiteInscription | date("d/m/yy h:m")}}</dd>
 
-        <dt class="col-sm-3">Nombre de places :</dt>
-        <dd class="col-sm-9">{{ sortie.nbInscriptionMax }}</dd>
+        <dt class="col-sm-3 list-group-item">Nombre de places :</dt>
+        <dd class="col-sm-9 d-flex align-items-center">{{ sortie.nbInscriptionMax }}</dd>
 
-        <dt class="col-sm-3">Durée :</dt>
-        <dd class="col-sm-9">{{ sortie.duree }} minutes</dd>
+        <dt class="col-sm-3 list-group-item">Durée :</dt>
+        <dd class="col-sm-9 d-flex align-items-center">{{ sortie.duree }} minutes</dd>
 
     {% if sortie.infosSortie is not null %}
         {% if sortie.etat.libelle != "annulée" %}
-            <dt class="col-sm-3">Descriptions et infos : </dt>
+            <dt class="col-sm-3 list-group-item">Descriptions et infos : </dt>
         {% elseif sortie.etat.libelle == "annulée" %}
-            <dt class="col-sm-3">Sortie annulée | RAISON : </dt>
+            <dt class="col-sm-3 list-group-item">Sortie annulée | RAISON : </dt>
         {% endif %}
-        <dd class="col-sm-9">{{ sortie.infosSortie}}</dd>
+        <dd class="col-sm-9 d-flex align-items-center">{{ sortie.infosSortie}}</dd>
     {% endif %}
 
-        <dt class="col-sm-3">Campus :</dt>
-        <dd class="col-sm-9">{{ sortie.organisateur.campus.nom }}</dd>
+        <dt class="col-sm-3 list-group-item">Campus :</dt>
+        <dd class="col-sm-9 d-flex align-items-center">{{ sortie.organisateur.campus.nom }}</dd>
 
-        <dt class="col-sm-3">Lieu</dt>
-        <dd class="col-sm-9">
+        <dt class="col-sm-3 list-group-item">Lieu</dt>
+        <dd class="col-sm-9 d-flex align-items-center">
 
         <dl class="row">
-        <dd class="col-sm-9">{{ sortie.lieu.nom }}</dd>
-        <dt class="col-sm-3"> </dt>
-        <dd class="col-sm-9">{{ sortie.lieu.rue }}</dd>
-        <dt class="col-sm-3"> </dt>
-        <dd class="col-sm-9">{{ sortie.lieu.ville.nom }}   {{ sortie.lieu.ville.codePostal }}</dd>
-
-    {% if sortie.lieu.latitude and sortie.lieu.longitude is not null %}
-        <dt class="col-sm-4">Coordonnées GPS :</dt>
-        <dd class="col-sm-8">{{ sortie.lieu.latitude }}, {{ sortie.lieu.longitude }}</dd>
-    {% endif %}
-
+            <dd class="col-sm-9 d-flex align-items-center">{{ sortie.lieu.nom }}</dd>
+            <dt class="col-sm-3"> </dt>
+            <dd class="col-sm-9 d-flex align-items-center">{{ sortie.lieu.rue }}</dd>
+            <dt class="col-sm-3"> </dt>
+            <dd class="col-sm-9 d-flex align-items-center">{{ sortie.lieu.ville.nom }}   {{ sortie.lieu.ville.codePostal }}</dd>
         </dl>
+    {% if sortie.lieu.latitude and sortie.lieu.longitude is not null %}
+        <dt class="col-sm-3 list-group-item">Coordonnées GPS :</dt>
+        <dd class="col-sm-9 d-flex align-items-center">{{ sortie.lieu.latitude }}, {{ sortie.lieu.longitude }}</dd>
+    {% endif %}
     </dl>
+    </div>
+</div>
+
+
+    <div class="col-12 d-flex justify-content-sm-center text-center btn-group">
+        <div style="margin-left: 5px;margin-right: 5px">
+            {% if utilisateurIns is not null and ((sortie.etat.libelle == "ouverte" or sortie.etat.libelle == "clôturée") and date(sortie.dateLimiteInscription) > date("now"))%}
+                {% if utilisateurIns.id == app.user.id %}
+                    <a class="btn btn-danger rounded" id="bouton-shadow" href="{{ path('inscriptionDelete', {id: idInscription}) }}">Se désister</a>
+                {% endif %}
+            {% endif %}
+        </div>
+
+        <div style="margin-left: 5px;margin-right: 5px">
+            {% if utilisateurIns is null and idInscription is null %}
+                {% if sortie.etat.id == 2 and date(sortie.dateLimiteInscription) > date("now") and sortie.getInscriptions()|length < 5 %}
+                    <a class="btn btn-info rounded" id="bouton-shadow" href="{{ path('inscription', {idSortie: sortie.id}) }}">S'inscrire</a>
+                {% endif %}
+            {% endif %}
+        </div>
+        <div style="margin-left: 5px;margin-right: 5px">
+        {% if sortie.organisateur.pseudo == app.user.pseudo and (sortie.etat.libelle == "ouverte" or sortie.etat.libelle == "clôturée")  and app.user.administrateur == 0 %}
+            <form action="{{ path('annuler_sortie', {id: sortie.id}) }}" >
+                <input type="hidden" id="raison" name="raisonUser"/>
+                <button class="btn btn-light rounded" id="bouton-shadow" type="submit">Annuler sortie</button>
+            </form>
+        {% endif %}
+    </div>
+
+    <div style="margin-left: 5px;margin-right: 5px">
+        {% if app.user.administrateur == 1 and  (sortie.etat.libelle == "ouverte" or sortie.etat.libelle == "clôturée") %}
+            <form action="{{ path('annuler', {id: sortie.id}) }}" >
+                <input type="hidden" id="raison" name="raisonAdmin"/>
+                <button class="btn btn-danger" id="bouton-shadow" type="submit">Annuler sortie</button>
+            </form>
+        {% endif %}
+    </div>
+    </div>
 
     <br>
     <div>
@@ -109,43 +147,6 @@
 
     <br>
 
-<div class="col-12 d-flex justify-content-sm-center text-center btn-group">
-    <div style="margin-left: 5px;margin-right: 5px">
-    {% if utilisateurIns is not null and ((sortie.etat.libelle == "ouverte" or sortie.etat.libelle == "clôturée") and date(sortie.dateLimiteInscription) > date("now"))%}
-        {% if utilisateurIns.id == app.user.id %}
-            <a class="btn btn-danger" href="{{ path('inscriptionDelete', {id: idInscription}) }}">Se désister</a>
-        {% endif %}
-    {% endif %}
-    </div>
-
-    <div style="margin-left: 5px;margin-right: 5px">
-        {% if utilisateurIns is null and idInscription is null %}
-            {% if sortie.etat.id == 2 and date(sortie.dateLimiteInscription) > date("now") and sortie.getInscriptions()|length < 5 %}
-                <a class="btn btn-info" href="{{ path('inscription', {idSortie: sortie.id}) }}">S'inscrire</a>
-            {% endif %}
-        {% endif %}
-    </div>
-
-
-    <div style="margin-left: 5px;margin-right: 5px">
-    {% if sortie.organisateur.pseudo == app.user.pseudo and (sortie.etat.libelle == "ouverte" or sortie.etat.libelle == "clôturée")  and app.user.administrateur == 0 %}
-        <form action="{{ path('annuler_sortie', {id: sortie.id}) }}" >
-            <input type="hidden" id="raison" name="raisonUser"/>
-            <button class="btn btn-light" type="submit">Annuler sortie</button>
-        </form>
-    {% endif %}
-    </div>
-
-    <div style="margin-left: 5px;margin-right: 5px">
-        {% if app.user.administrateur == 1 and  (sortie.etat.libelle == "ouverte" or sortie.etat.libelle == "clôturée") %}
-            <form action="{{ path('annuler', {id: sortie.id}) }}" >
-                <input type="hidden" id="raison" name="raisonAdmin"/>
-                <button class="btn btn-danger" type="submit">Annuler sortie</button>
-            </form>
-        {% endif %}
-    </div>
-</div>
-
 {% endblock %}
 
 
@@ -156,7 +157,7 @@
             //return confirm('Voulez vous vraiment annuler cette sortie ?');
 
             var raison = prompt("Veuillez renseigner un raison d'annulation : ");
-            if (raison == null || raison == "") {
+            if (raison == null || raison === "") {
                 return false;
             } else {
                 document.getElementById("raison").value = raison;
