--- a/templates/sortie/annulerSortie.html.twig
+++ b/templates/sortie/annulerSortie.html.twig
@@ -32,15 +32,15 @@
             <form action="{{ path("annuler", {id: sortie.id}) }}" method="post">
                 <label>Motif : </label>
                 <input type="text" name="raison"><br>
-                <button class="btn btn-primary" type="submit" name="confirmation">Confirmer l'annulation</button>
-                <a class="btn btn-light" href="javascript:history.back()">Retour</a>
+                <button class="btn btn-info" id="bouton-shadow" type="submit" name="confirmation">Confirmer l'annulation</button>
+                <a class="btn btn-light" id="bouton-shadow" href="javascript:history.back()">Retour</a>
             </form>
         {% elseif app.user.administrateur == 0  %}
             <form action="{{ path("annuler_sortie", {id: sortie.id}) }}" method="post">
                 <label>Motif : </label>
                 <input type="text" name="raison"><br>
-                <button class="btn btn-primary" type="submit" name="confirmation">Confirmer l'annulation</button>
-                <a class="btn btn-light" href="javascript:history.back()">Retour</a>
+                <button class="btn btn-info" id="bouton-shadow" type="submit" name="confirmation">Confirmer l'annulation</button>
+                <a class="btn btn-light" id="bouton-shadow" href="javascript:history.back()">Retour</a>
             </form>
         {% endif %}
     </div>
