--- a/templates/ville/gestion-villes.html.twig
+++ b/templates/ville/gestion-villes.html.twig
@@ -2,7 +2,7 @@
 {% block title %}Gestion des villes{% endblock %}
 
 {% block main %}
-    <div class="jumbotron">
+    <div class="jumbotron" id="afficher-sortie-shadow">
         <h1 class="text-center">Gérer les villes</h1>
         {{ form_start(gestionVilles) }}
         <div class="form-row">
@@ -11,7 +11,7 @@
             </div>
             <div class="col-3 align-self-center" style="padding-top: 15px">
                 <input class="btn btn-outline-info"
-                       type="submit" value="Rechercher">
+                       id="bouton-shadow" type="submit" value="Rechercher">
             </div>
         </div>
         {{ form_end(gestionVilles) }}
@@ -33,11 +33,11 @@
                                 {{ ville.codePostal }}</td>
                             <td>
                                 <form style="align-items:center" action="{{ path('gestion_villes', {id: ville.id}) }}" onsubmit="return validate_update()">
-                                    <button class="btn btn-info" type="submit">Modifier Ville</button>
+                                    <button class="btn btn-info align-items-center" id="bouton-shadow" type="submit">Modifier Ville</button>
                                 </form>
                                 <form style="align-items:center" action="{{ path('supprimer_Ville', {id: ville.id}) }}" onsubmit="return validate()">
                                     <input id="status" hidden value="nope">
-                                    <button class="btn btn-danger" type="submit">Supprimer Ville</button>
+                                    <button class="btn btn-danger align-items-center" id="bouton-shadow" type="submit">Supprimer Ville</button>
                                 </form>
                             </td>
                     </tr>
