ombrage des boutons entre autre

--- a/templates/User/import.html.twig
+++ b/templates/User/import.html.twig
@@ -6,7 +6,7 @@
     {{ form_start(fichierFrom) }}
 
     <label>Le fichier .csv : </label>
-    <div class="btn btn-outline-info" id="bouton-shadow">
+    <div class="btn btn-outline-secondary">
         {{ form_label(fichierFrom.fichier) }}
         {{ form_widget(fichierFrom.fichier) }}
         {{ form_errors(fichierFrom.fichier) }}
