--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -46,7 +46,7 @@
 
                                     <input id="status" hidden value="nope">
 
-                                    <button class="btn btn-outline-info" id="bouton-shadow" type="submit">Activer</button>
+                                    <button class="btn btn-outline-info" type="submit">Activer</button>
 
                                 </form>
                             </td>
@@ -57,7 +57,7 @@
 
                                     <input id="status" hidden value="nope">
 
-                                    <button class="btn btn-outline-info" id="bouton-shadow" type="submit">Désactiver</button>
+                                    <button class="btn btn-outline-danger" type="submit">Désactiver</button>
 
                                 </form>
                             </td>
