--- a/templates/User/monProfil.html.twig
+++ b/templates/User/monProfil.html.twig
@@ -8,7 +8,7 @@
         {{ form_start(userForm) }}
         <div class="form-row col-12">
             {% if user.getUrlPhoto() is not null%}
-            <div class="col-lg-12 col-md-12 col-sm-12 text-center">
+            <div class="col-lg-12 col-md-12 col-sm-12 mb-4 text-center">
                 <img src="{{ asset('uploads/photo_profil/' ~
                     user.getUrlPhoto()) }}" width="150" id="bouton-shadow">
             </div>
