--- a/templates/campus/gestion-campus.html.twig
+++ b/templates/campus/gestion-campus.html.twig
@@ -42,6 +42,7 @@
                                 <button class="btn btn-danger mt-1" type="submit">
                                     Supprimer
                                 </button>
+                            </form>
                         </td>
                     </tr>
                 {% endfor %}
