Push de l'ajout d'un lieu en js directement depuis la création sortie :bowtie:

--- a/templates/sortie/createSortie.html.twig
+++ b/templates/sortie/createSortie.html.twig
@@ -68,25 +68,25 @@
             </div>
 
             <div id="lieuForm" style="display: none">
-                <input type="text" value="0" hidden id="inputId">
+                <input type="text" value="0" hidden id="inputId" name="inputId">
                 <div>
                     <label>Nom du lieu : </label>
-                    <input type="text" value="">
+                    <input type="text" value="" name="nomLieu">
                 </div>
 
                 <div>
                     <label>Rue : </label>
-                    <input type="text" value="">
+                    <input type="text" value="" name="rueLieu">
                 </div>
 
                 <div>
                     <label>Latitude : </label>
-                    <input type="text" value="">
+                    <input type="text" value="" name="latiLieu">
                 </div>
 
                 <div>
                     <label>Longitude : </label>
-                    <input type="text" value="">
+                    <input type="text" value="" name="longiLieu">
                 </div>
 
             </div>
