--- a/templates/sortie/modifierSortie.html.twig
+++ b/templates/sortie/modifierSortie.html.twig
@@ -49,9 +49,6 @@
                     {{ form_row(sortieModifForm.lieu) }}
                 </div>
                 <div class="align-self-center d-none d-md-block" style="padding-top: 15px;padding-left: 5px">
-                    <a href="{{ path('sortie') }}" title="Ajouter un lieu"><img src="{{ asset('img/bouton_ajouter.png') }}"
-                                                                                alt="Ajouter un lieu" class="bouton-plus"
-                                                                                width="35px"></a>
                 </div>
             </div>
 
@@ -92,13 +89,13 @@
     <div class="text-center">
 
         <div>
-            {{ form_row(sortieForm.creer , { 'label': 'Enregistrer',
+            {{ form_row(sortieModifForm.creer , { 'label': 'Enregistrer',
             'id': 'bouton-shadow'
         }) }}</div>
         {#{{ form_widget(sortieForm.creer) }}#}
 
         <div>
-        {{ form_row(sortieForm.creerEtPublier , { 'label': 'Publier',
+        {{ form_row(sortieModifForm.creerEtPublier , { 'label': 'Publier',
             'id': 'bouton-shadow'
         }) }}
         </div>
