--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -9,6 +9,15 @@
     <link rel="stylesheet" href={{ asset ("css/bootstrap.css") }}>
     <link rel="stylesheet" href={{ asset ("css/app.css") }}>
     <link rel="icon" href="img/sortir.png">
+
+    <meta charset="utf-8">
+    <!-- Nous chargeons les fichiers CDN de Leaflet. Le CSS AVANT le JS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="" />
+    <style type="text/css">
+        #map{ /* la carte DOIT avoir une hauteur sinon elle n'apparaît pas */
+            height:200px; width: 350px;
+        }
+    </style>
 </head>
 <body>
 <header>
