--- a/templates/sortie/afficherSortie.html.twig
+++ b/templates/sortie/afficherSortie.html.twig
@@ -73,8 +73,12 @@
             <dd class="col-sm-9 d-flex align-items-center">{{ sortie.lieu.ville.nom }}   {{ sortie.lieu.ville.codePostal }}</dd>
         </dl>
     {% if sortie.lieu.latitude and sortie.lieu.longitude is not null %}
-        <dt class="col-sm-3 list-group-item">Coordonnées GPS :</dt>
-        <dd class="col-sm-9 d-flex align-items-center">{{ sortie.lieu.latitude }}, {{ sortie.lieu.longitude }}</dd>
+        <dt class="col-sm-3 list-group-item d-flex align-items-center">Coordonnées GPS :</dt>
+        <dd class="col-sm-9 d-flex align-items-center">
+        {{ sortie.lieu.latitude }}, {{ sortie.lieu.longitude }}
+        <div id="map" class="mt-2 ml-lg-4"></div>
+        </dd>
+
     {% endif %}
     </dl>
     </div>
@@ -144,11 +148,7 @@
         </table>
     </div>
     {% endif %}
-
-    <br>
-
 {% endblock %}
-
 
 {% block javascripts %}
     {{ parent() }}
@@ -165,4 +165,32 @@
             }
         }
     </script>
+
+    <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
+    integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
+    crossorigin="">
+    </script>
+	<script type="text/javascript">
+            // On initialise la latitude et la longitude de Paris (centre de la carte)
+            var lat = {{ sortie.lieu.latitude }};
+            var lon = {{ sortie.lieu.longitude }};
+            var macarte = null;
+            // Fonction d'initialisation de la carte
+            function initMap() {
+                // Créer l'objet "macarte" et l'insèrer dans l'élément HTML qui a l'ID "map"
+                macarte = L.map('map').setView([lat, lon], 11);
+                // Leaflet ne récupère pas les cartes (tiles) sur un serveur par défaut. Nous devons lui préciser où nous souhaitons les récupérer. Ici, openstreetmap.fr
+                L.tileLayer('https://{s}.tile.openstreetmap.fr/osmfr/{z}/{x}/{y}.png', {
+                    // Il est toujours bien de laisser le lien vers la source des données
+                    attribution: 'données © <a href="//osm.org/copyright">OpenStreetMap</a>/ODbL - rendu <a href="//openstreetmap.fr">OSM France</a>',
+                    minZoom: 1,
+                    maxZoom: 20
+                }).addTo(macarte);
+            }
+            window.onload = function(){
+		// Fonction d'initialisation qui s'exécute lorsque le DOM est chargé
+		initMap();
+		var marker = L.marker([lat, lon]).addTo(macarte);
+            };
+        </script>
 {% endblock %}
