mot de passe oublié mt

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -50,7 +50,7 @@
                     Se souvenir de moi
                 </label>
             </div>
-            <div class="col-8">
+            <div class="col-8 mt-2">
                 <a href="{{ path('app_forgotten_password') }}">Mot de passe oublié</a>
             </div>
         </div>
