--- a/templates/User/register.html.twig
+++ b/templates/User/register.html.twig
@@ -42,7 +42,7 @@
                 <div class="card col-12 col-lg-8 offset-lg-2">
                     <div class="card-body row">
                         <h5 class="card-title col-12">
-                            Modifier votre mot de passe :
+                            Mot de passe de l'utilisateur :
                         </h5>
                         <div class="col-12 col-lg-6 col-md-6 col-sm-12">
                             {{ form_row(userForm.password.first) }}
